# Code-Quality-Intelligence-Agent

./: .gitignore  MANIFEST.in  README-PYPI.md  README.md  cli.py  comprehensive_cli_test.py  config.py  cqi-web.bat  cqi-web.py  cqi.py  demo.py  demo_github.py  pipeline.md  project_structure.py  pyproject.toml  requirements.txt  sample_run.md  setup-web.py  setup.py  ship_validation.py  streamlit_app.py  test_all_features.py  test_example.js  test_example.py  test_local.json  test_local.md  validation.py
.github/workflows/: python-publish.yml
Webpage/: QUICK_START.md  README.md  app.py  config.py  cqi-web  cqi-web.bat  launch.bat  launch.py  launch.sh  requirements.txt  test_app.py
chroma_db/: chroma.sqlite3
code_quality_agent/: __init__.py  __main__.py  agent.py  analyzers.py  chatbot.py  cli.py  config.py  embedding_rag.py  rag_system.py  report_generator.py  simple_embedding_rag.py  simple_rag.py
code_quality_agent/utils/: file_handler.py
core/: agent.py  analyzers.py  chatbot.py  rag_system.py  report_generator.py  simple_rag.py
sample_code/: java_example.java  module_a.py  module_b.py  php_example.php
simple_embeddings_db/: simple_documents.pkl  simple_metadata.pkl  vocabulary.pkl
test_files/: c_example.c
utils/: file_handler.py
